--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
@@ -13,6 +8,9 @@ pool:
   - visualstudio
 
 steps:
+- checkout: self
+  submodules: recursive
+
 - task: NuGetToolInstaller@1
   displayName: 'Use NuGet '
 
