--- a/Microsoft.VisualStudio.MiniEditor/Microsoft.VisualStudio.MiniEditor.csproj
+++ b/Microsoft.VisualStudio.MiniEditor/Microsoft.VisualStudio.MiniEditor.csproj
@@ -6,7 +6,6 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);vs-editor-api\**\*</DefaultItemExcludes>
     <BaseEditorPath>vs-editor-api\src\Editor\</BaseEditorPath>
     <SignAssembly>true</SignAssembly>
-    <DelaySign>false</DelaySign>
     <PublicSign>true</PublicSign>
     <AssemblyOriginatorKeyFile>..\public.snk</AssemblyOriginatorKeyFile>
     <VSEditorNugetVersion>16.1.89</VSEditorNugetVersion>
@@ -56,6 +55,7 @@
     <VsEditorSource Include="$(BaseEditorPath)Language\Impl\Language\AsyncCompletion\CaretPreservingEditTransaction.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Language\Impl\Language\AsyncCompletion\CompletionAvailabilityCacheKey.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Language\Impl\Language\AsyncCompletion\CompletionAvailabilityUtility.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Language\Impl\Language\AsyncCompletion\CompletionCommandHandlers.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Language\Impl\Language\AsyncCompletion\CompletionModel.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Language\Impl\Language\AsyncCompletion\CompletionSourceConnectionResult.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Language\Impl\Language\AsyncCompletion\CompletionTelemetry.cs" />
@@ -103,6 +103,8 @@
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\PatternMatching\Utilities.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\PatternMatching\WordSimilarityChecker.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\TextData\INonJoinableTaskTrackerInternal.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\TextData\ExtensionMethods.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\TextData\TextBufferOperationHelpers.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextDataUtil\ArgumentValidation.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextDataUtil\BufferTracker.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextDataUtil\DifferenceCollection.cs" />
@@ -131,6 +133,15 @@
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextDataUtil\WeakReferenceForKey.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextUIUtil\UIExtensionSelector.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextUIUtil\IDeferrableContentTypeAndTextViewRoleMetadata.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextUIUtil\IMultiSelectionBrokerFactory.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextUIUtil\SelectionState.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Impl\EditorOperations\EditorOperationsFactoryService.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Impl\EditorOperations\EditorOperations.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Impl\EditorOperations\CollapsedMoveUndoPrimitive.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Impl\EditorOperations\TextEditAction.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Impl\EditorOperations\TextTransactionMergePolicy.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Impl\EditorOperations\BeforeTextBufferChangeUndoPrimitive.cs " />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Impl\EditorOperations\AfterTextBufferChangeUndoPrimitive.cs " />
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\TextModel\BaseBuffer.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\TextModel\BaseSnapshot.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\TextModel\BufferFactoryService.cs" />
@@ -226,9 +237,16 @@
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\TagAggregator\TagAggregatorFactoryService.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextLogicUtil\INamedTaggerMetadata.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextLogicUtil\ITaggerMetadata.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextLogicUtil\TextUndoPrimitive.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\TextData\JoinableTaskHelper.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\TextLogic\TagAggregatorOptions2.cs" />
+    <!-- public but not available in public asms yet -->
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\TextUI\*.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\TextUI\Operations\IEditorOperations4.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\TextUI\Editor\ITextView3.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Def\TextUI\Utilities\IStatusBarService.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\TextUI\Formatting\ITextViewLineSource.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\TextUI\Adornments\*.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextUIUtil\StatusBarService.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextUIUtil\DefaultStatusBarService.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Util\TextUIUtil\UIThreadOperationExecutor.cs" />
@@ -252,6 +270,11 @@
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\StandaloneUndo\UndoHistoryRegistryImpl.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\StandaloneUndo\UndoTransactionImpl.cs" />
     <VsEditorSource Include="$(BaseEditorPath)Text\Impl\StandaloneUndo\WeakReferenceForDictionaryKey.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\Language\IWaitIndicator.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)Text\Def\Internal\Language\IWaitContext.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)..\FPF\PresentationCore\System.Windows.DataObject.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)..\FPF\PresentationCore\System.Windows.TextDataFormat.cs" />
+    <VsEditorSource Include="$(BaseEditorPath)..\FPF\PresentationCore\System.Windows.DataFormats.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="@(VsEditorSource)" />
@@ -260,59 +283,70 @@
     <EmbeddedResource Include="$(BaseEditorPath)Core\Impl\ContentType\Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <ManifestResourceName>Microsoft.VisualStudio.CoreUtilityImplementation.ContentType.Strings</ManifestResourceName>
-      <LastGenOutput>$(BaseEditorPath)Core\Impl\ContentType\Strings.Designer.cs</LastGenOutput>
+      <LastGenOutput>vs-editor-api\src\Editor\Core\Impl\ContentType\Strings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Microsoft.VisualStudio.Utilities.Implementation</CustomToolNamespace>
     </EmbeddedResource>
     <EmbeddedResource Include="$(BaseEditorPath)Text\Impl\TextModel\Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <ManifestResourceName>Microsoft.VisualStudio.Text.Implementation.Strings</ManifestResourceName>
-      <LastGenOutput>$(BaseEditorPath)Text\Impl\TextModel\Strings.Designer.cs</LastGenOutput>
+      <LastGenOutput>vs-editor-api\src\Editor\Text\Impl\TextModel\Strings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Microsoft.VisualStudio.Text.Implementation</CustomToolNamespace>
     </EmbeddedResource>
     <EmbeddedResource Include="$(BaseEditorPath)Language\Impl\Language\Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <ManifestResourceName>Microsoft.VisualStudio.Language.Intellisense.Implementation.Strings</ManifestResourceName>
-      <LastGenOutput>$(BaseEditorPath)Language\Impl\Language\Strings.Designer.cs</LastGenOutput>
+      <LastGenOutput>vs-editor-api\src\Editor\Language\Impl\Language\Strings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Microsoft.VisualStudio.Language.Intellisense.Implementation</CustomToolNamespace>
     </EmbeddedResource>
     <EmbeddedResource Include="$(BaseEditorPath)Text\Impl\ClassificationType\Strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <ManifestResourceName>Microsoft.VisualStudio.Text.Classification.Implementation.LookUp.Strings</ManifestResourceName>
-      <LastGenOutput>$(BaseEditorPath)Text\Impl\ClassificationType\Strings.Designer.cs</LastGenOutput>
+      <LastGenOutput>vs-editor-api\src\Editor\Text\Impl\ClassificationType\Strings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Microsoft.VisualStudio.Text.Classification.Implementation.LookUp</CustomToolNamespace>
     </EmbeddedResource>
     <EmbeddedResource Include="$(BaseEditorPath)Text\Impl\Commanding\CommandingStrings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <ManifestResourceName>Microsoft.VisualStudio.UI.Text.Commanding.Implementation.CommandingStrings</ManifestResourceName>
-      <LastGenOutput>$(BaseEditorPath)Text\Impl\Commanding\CommandingStrings.Designer.cs</LastGenOutput>
+      <LastGenOutput>vs-editor-api\src\Editor\Text\Impl\Commanding\CommandingStrings.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Microsoft.VisualStudio.UI.Text.Commanding.Implementation</CustomToolNamespace>
+    </EmbeddedResource>
+    <EmbeddedResource Include="$(BaseEditorPath)Text\Impl\EditorOperations\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <ManifestResourceName>Microsoft.VisualStudio.Text.Operations.Implementation.Strings</ManifestResourceName>
+      <LastGenOutput>vs-editor-api\src\Editor\Text\Impl\EditorOperations\Strings.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>Microsoft.VisualStudio.Text.Operations.Implementation</CustomToolNamespace>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="$(BaseEditorPath)Core\Impl\ContentType\Strings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>$(BaseEditorPath)Core\Impl\ContentType\Strings.resx</DependentUpon>
+      <DependentUpon>vs-editor-api\src\Editor\Core\Impl\ContentType\Strings.resx</DependentUpon>
     </Compile>
     <Compile Include="$(BaseEditorPath)Language\Impl\Language\Strings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>$(BaseEditorPath)Language\Impl\Language\Strings.resx</DependentUpon>
+      <DependentUpon>vs-editor-api\src\Editor\Language\Impl\Language\Strings.resx</DependentUpon>
     </Compile>
     <Compile Include="$(BaseEditorPath)Text\Impl\TextModel\Strings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>$(BaseEditorPath)Text\Impl\TextModel\Strings.resx</DependentUpon>
+      <DependentUpon>vs-editor-api\src\Editor\Text\Impl\TextModel\Strings.resx</DependentUpon>
     </Compile>
     <Compile Include="$(BaseEditorPath)Text\Impl\ClassificationType\Strings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>$(BaseEditorPath)Text\Impl\ClassificationType\Strings.resx</DependentUpon>
+      <DependentUpon>vs-editor-api\src\Editor\Text\Impl\ClassificationType\Strings.resx</DependentUpon>
     </Compile>
     <Compile Include="$(BaseEditorPath)Text\Impl\Commanding\CommandingStrings.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>$(BaseEditorPath)Text\Impl\Commanding\CommandingStrings.resx</DependentUpon>
+      <DependentUpon>vs-editor-api\src\Editor\Text\Impl\Commanding\CommandingStrings.resx</DependentUpon>
+    </Compile>
+    <Compile Include="$(BaseEditorPath)Text\Impl\EditorOperations\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>vs-editor-api\src\Editor\Text\Impl\EditorOperations\Strings.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
